--- a/css/wall.css
+++ b/css/wall.css
@@ -629,21 +629,23 @@
 @keyframes showPopupRequest {
     from {
         opacity: 0;
-        transform: scale(0%) translate(0%, -50%);
+        transform: translate(0%, -100%);
     }
-
+    
     to {
         opacity: 1;
-        transform: scale(100%) translate(0, 0);
+        transform: translate(0, 0);
     }
 }
 
 @keyframes hidePopupRequest {
     from {
+        transform: translate(0, 0);
         opacity: 1;
     }
-
+    
     to {
+        transform: translate(0%, -100%);
         opacity: 0;
     }
 }
