--- a/css/profile.css
+++ b/css/profile.css
@@ -582,6 +582,54 @@
     color: var(--main-accent-color);
 }
 
+.third-part .blossom-level {
+    border-radius: 0;
+    top: calc(2.6rem + 7.2rem + 17.2rem + 2.6rem);
+    margin-top: 2.6rem;
+}
+
+.blossom-level .progress-div {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.blossom-level a {
+    font-size: var(--font-size-2);
+    display: flex;
+    gap: 1rem;
+    cursor: pointer;
+    align-items: center;
+}
+
+.blossom-level a:hover {
+    gap: 1.2rem;
+} 
+
+.blossom-level svg {
+    fill: var(--else-text-color-50);
+}
+
+.blossom-level .progress {
+    position: absolute;
+    left: calc(100% - (100% - var(--r)) + 0.5rem);
+    font-size: var(--font-size-1);
+}
+
+.blossom-level progress {
+    width: 100%;
+    appearance: none;
+}
+
+.blossom-level progress::-webkit-progress-bar {
+    background: #eee;
+}
+
+.blossom-level progress::-webkit-progress-value, .blossom-level progress::-moz-progress-bar {
+    background: var(--main-accent-color);
+}
+
+
 
 @media (max-width: 1320px) {
     .third-part-mobile {
